--- a/content/data/config.json
+++ b/content/data/config.json
@@ -110,7 +110,7 @@
                 "label": "lorem-ipsum",
                 "altText": "lorem-ipsum",
                 "url": "#",
-                "showIcon": false,
+                "showIcon": true,
                 "icon": "facebook",
                 "style": "secondary",
                 "elementId": ""
