config.json: updated style in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -112,7 +112,7 @@
                 "url": "#",
                 "showIcon": true,
                 "icon": "facebook",
-                "style": "secondary",
+                "style": "link",
                 "elementId": ""
             },
             {
