config.json: updated icon in socialLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -111,7 +111,7 @@
                 "altText": "lorem-ipsum",
                 "url": "#",
                 "showIcon": true,
-                "icon": "facebook",
+                "icon": "twitter",
                 "style": "link",
                 "elementId": ""
             },
