--- a/content/data/config.json
+++ b/content/data/config.json
@@ -111,7 +111,7 @@
                 "url": "#",
                 "showIcon": true,
                 "icon": "twitter",
-                "style": "link",
+                "style": "primary",
                 "elementId": ""
             },
             {
