--- a/content/data/config.json
+++ b/content/data/config.json
@@ -50,7 +50,7 @@
         ],
         "styles": {
             "self": {
-                "width": "wide",
+                "width": "full",
                 "padding": [
                     "pt-5",
                     "pb-5"
